- Added a public API so other addon developers can register themselves as a queue destination and added a UI so users can select that destination.
- Added a config option to control how many extra copies of an item are created if its being managed with QA. The previous behaveior was to add 25% to whatever QA would normally post. Now it defaults to 0% and is user configurable.

2010-07-27  Asa Ayers  <Asa.Ayers@Gmail.com>

- Fixed an infinite loop when when adding items to the Skillet queue from the crafting interface.
- For Developers: Changed ItemAuditor to no longer be in the global namespace
- For Developers: Added IAapi to the public namespace so other addons can interact with ItemAuditor.

2010-07-25  Asa Ayers  <Asa.Ayers@Gmail.com>

- Added the version number to the title in ItemAuditor options.
- Implemented a crafting interface. This will eventually replace /ia queue, but for now they are two separate features.

2010-07-22  Asa Ayers  <Asa.Ayers@Gmail.com>

- I Added an option to direct ItemAuditor output to a different chat frame.

2010-07-21  Asa Ayers  <Asa.Ayers@Gmail.com>

- Fixed a bug where if you attached money and items to a piece of mail it would count all of the money as postage.

2010-07-21  Asa Ayers  <Asa.Ayers@Gmail.com>

- Fixed the way prices were being calculated as items were being created/destroyed/converted/crafted. see http://www.wowace.com/addons/itemauditor/tickets/7-create-options-for-how-to-distribute-value-when-creating/

2010-07-18  Asa Ayers  <Asa.Ayers@Gmail.com>

- Implemented COD mail (Ticket #1) and updated the way postage was counted so that if you mail multiple items at once, they will all have the postage counted. I also removed the 30c for postage from how QA thresholds are calculated now that they will be counted every time.
- Added a dialog to allow the user to send COD mail without a tracking number.
- Replaced my edit window with a static popup. This looks and behaves better this way.